# libhopeful

./: Cargo.toml  README.md  build.rs  test.json
examples/: c_works_too.c  dlmalloc_test.rs  egui.rs  foo.rs  from_file.rs  international_communication.rs  lhl.h  pure-c.json  tests.rs  write_allocs.rs
src/: lazy_lock.rs  lib.rs
src/alloc/: bitvec.rs  crap.archive  dlmalloc.rs  global.rs  manual.rs  meta.rs  mod.rs  rawbuf.rs  tracing.rs  tracing_alloc.rs
src/arch/: mem.rs
src/clib/: dlmalloc.archive  dlmalloc.c
src/externc/: mod.rs
src/graph/: logical.rs  mod.rs
src/graph/gui/: egui.rs  mod.rs
src/os/: mem.rs
src/serialize/: mod.rs  serde_usize.rs
src/util/: assert.rs  hint.rs  mod.rs  num.rs  print.rs
