[package]
name = "lhl"
version = "0.1.0"
edition = "2021"
description = "Logical heap visualisation in Rust"

[dependencies]
ahash = "0.8.11"
bytemuck = { version = "1.14.3", features = ["zeroable_atomics"] }
crossbeam = "0.8.4"
dlmalloc = { version = "0.2.6", features = ["global"] }
eframe = "0.26"
egui = { version = "0.26", features = ["persistence"] }
egui_extras = "0.26"
egui_graphs = { version = "0.19.0", features = ["egui_persistence", "serde"] }
egui_node_graph = "0.4.0"
env_logger = "0.11.3"
hashbrown = "0.14.3"
libc = "0.2.153"
linux-futex = "0.2.0"
once_cell = "1.19.0"
page_size = "0.6.0"
petgraph = "0.6.4"
rand = "0.8.5"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
tynm = "0.1.10"

[build-dependencies]
cc = "1.0.90"

[profile.rg]
inherits = "release"
debug = true

# [lib]
# crate-type = ["staticlib"]